# Gen1

./: README.md  example.py  pyproject.toml  requirements.txt
gen1/: __init__.py  attend.py  clip.py  gen1.py  midas.py  model.py  pipeline.py  train.py
