[tool.poetry]
name = "gen1"
version = "0.0.4"
description = "Text to Video synthesis"
authors = ["Gen1 <kye@apac.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kyegomez/gen1"
keywords = ["Transformers", "zeta scale"]
classifiers = [
    "Programming Language :: Python :: 3",
]


[tool.poetry.dependencies]
python = "^3.8"
torch = "*"
einops = "*"
transformers = "*"
open_clip_torch = "*"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

